<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent" tools:context="ui.MainActivity" android:background="#000000">

   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:id="@+id/imageView"
       android:src="@drawable/glass"
       android:scaleType="centerCrop" />

   <TextView
       android:id="@+id/appNameTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="35dp"
       android:fontFamily="@font/roboto_condensed_regular"
       android:text="MyRestaurants"
       android:textColor="@color/colorTextIcons"
       android:textSize="50sp"
       android:textStyle="bold" />

   <EditText
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/locationEditText"
       android:background="@color/colorTextIcons"
       android:layout_above="@+id/findRestaurantsButton"
       android:layout_marginBottom="10dp"
       android:padding="5dp"
       android:hint="Enter Zip Code"
       android:layout_centerHorizontal="true" />

   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="Find Restaurants"
       android:id="@+id/findRestaurantsButton"
       android:background="@color/colorAccent"
       android:textColor="@color/colorTextIcons"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true" />
</RelativeLayout>